# iterative-label-refinement

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/bird/test/: data-00000-of-00001.arrow  state.json
data/bird/train/: dataset_info.json  state.json
data/saferpaca/test/: data-00000-of-00001.arrow  state.json
data/saferpaca/train/: state.json
iterative_label_refinement/core/: common.py  datasets.py  eval.py  logger.py  models.py  train.py  train_evaluator.py
iterative_label_refinement/experiments/: dpo.py  generate_evaluator_data.py  ilr.py  main.py  naive.py
iterative_label_refinement/metrics/: eval_bird.py  eval_gsm8k.py  eval_saferpaca.py
scripts/evaluator-training/: train-evaluator-bird.sh  train-evaluator-gsm8k-7b.sh  train-evaluator-gsm8k.sh  train-evaluator-saferpaca.sh
scripts/main-experiments/: run-dpo-bird.sh  run-dpo-gsm8k-70b.sh  run-dpo-gsm8k.sh  run-dpo-saferpaca.sh  run-ilr-bird.sh  run-ilr-gsm8k-70b.sh  run-ilr-gsm8k.sh  run-ilr-saferpaca.sh  run-naive-gsm8k.sh
scripts/main-experiments/parallel/: run-ilr-gsm8k.sh  run-ilr-saferpaca.sh  run-naive-gsm8k.sh
scripts/supervision-quality/: run-cororadpo-gsm8k.sh  run-cororailr-gsm8k.sh  run-oradpo-gsm8k.sh  run-orailr-gsm8k.sh
scripts/supervision-quality/parallel/: run-cororailr-gsm8k.sh  run-orailr-gsm8k.sh
